Added download file controller

--- a/src/mail/templates/contact.template.hbs
+++ b/src/mail/templates/contact.template.hbs
@@ -37,31 +37,29 @@
 
     <table cellpadding="0" cellspacing="0" border="0" width="600">
       <tr>
-        <td width="200">Sender: </td>
+        <td width="100">Sender: </td>
         <td width="400">
           {{name}}
         </td>
       </tr>
 
       <tr>
-        <td width="200">Email: </td>
+        <td width="100">Email: </td>
         <td width="400">
           {{email}}
         </td>
       </tr>
 
       <tr>
-        <td width="200">Subject: </td>
+        <td width="100">Subject: </td>
         <td width="400">
           {{subject}}
         </td>
       </tr>
 
       <tr>
-        <td width="200">Message: </td>
-        <td width="400">
-          {{message}}
-        </td>
+        <td width="100">Message: </td>
+        <td width="400" style="white-space: pre-line;">{{message}}</td>
       </tr>
     </table>
   </div>
